--- a/views/hotel/buscarHoteles/seccionBHoteles.phtml
+++ b/views/hotel/buscarHoteles/seccionBHoteles.phtml
@@ -14,7 +14,7 @@
                                     <a href="#ficha{pest}" data-toggle="tab">Ficha T&eacute;cnica</a>
                                 </li>
                                 <li>
-                                    <a href="#BH_mapa{pest}" data-toggle="tab" onclick="verMapa('{BASE_URL}sistema/cargarMapas/{lat}/{lon}/{hotel}/{pest}', 'BH_mapa{pest}');">Mapa</a>
+                                    <a href="#BH_mapa{pest}" data-toggle="tab" onclick="Hoteles.prototype.verMapa('{BASE_URL}hotel/cargarMapas/{lat}/{lon}/{hotel}/{pest}', 'BH_mapa{pest}');">Mapa</a>
                                 </li>
                             </ul>
                         </div>
