--- a/views/hotel/centerBox/editHotel.phtml
+++ b/views/hotel/centerBox/editHotel.phtml
@@ -472,10 +472,11 @@
     <br />
     <center>
     <input type="button"  id="btnSubeVoucherAgen" class="btn btn-primary" value="Modificar Hotel" 
-    onclick="procesoEnviaForm('frmEditaHotel','<?php echo BASE_URL?>sistema/modificarHotel', 'btnSubeVoucherAgen')">
+    onclick="Hoteles.prototype.procesoEnviaForm('frmEditaHotel','<?php echo BASE_URL?>hotel/modificarHotel', 'btnSubeVoucherAgen', '<?php echo BASE_URL?>hotel/hoteles')">
     </center>
     
     <script>
+    /*
     function procesoEnviaForm(classFrm,url,btn){
     
         initLoad();
@@ -513,7 +514,7 @@
         
      
         
-        
+      */  
     } 
     </script>
     
