--- a/views/imagen/imagenes.phtml
+++ b/views/imagen/imagenes.phtml
@@ -29,7 +29,7 @@
                                 
                                     <div class="col-md-12">
                                     
-                                        <select name="cmbCategoria_lVA" id="cmbCategoria_lVA" style="width:400px" onchange="procesoCargaDiv(this.value, 'lVA_divDetalle', '<?php echo BASE_URL; ?>sistema/logoVoucher')">
+                                        <select name="cmbCategoria_lVA" id="cmbCategoria_lVA" style="width:400px" onchange="procesoCargaDiv(this.value, 'lVA_divDetalle', '<?php echo BASE_URL; ?>imagen/logoVoucher')">
                                             <option value="0">Seleccione una agencia</option>
                                            <?php
                                             //$var_getAgen= false; //$privateFunctions->getAgencias();
