--- a/views/usuario/usuarios.phtml
+++ b/views/usuario/usuarios.phtml
@@ -111,7 +111,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td colspan="4" align="center"> <input type="button" class="finish btn-primary btn" id="btnCrearUsuario" value="Crear nuevo usuario" onclick="procesoEnviaForm('frmCrearUsuario','<?php echo BASE_URL?>sistema/insertUsuarios', 'btnCrearUsuario')"/> </td>
+                                                <td colspan="4" align="center"> <input type="button" class="finish btn-primary btn" id="btnCrearUsuario" value="Crear nuevo usuario" onclick="procesoEnviaForm('frmCrearUsuario','<?php echo BASE_URL?>usuario/insertUsuarios', 'btnCrearUsuario','')"/> </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -153,7 +153,7 @@
                                                     ?>
                                                 </td>
                                                 <td align="center">
-                                                <a data-toggle="modal" href="#myModal" onClick="abrePopupPrograma('<?php echo BASE_URL ?>sistema/editUsuarios', 'Editar Usuario', '<?php echo $EU_usuario->getIdUsuario(); ?>');">
+                                                <a data-toggle="modal" href="#myModal" onClick="Usuarios.prototype.abrePopupCenter('<?php echo BASE_URL ?>usuario/editUsuarios', 'Editar Usuario', '<?php echo $EU_usuario->getIdUsuario(); ?>');">
                                                 <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
                                                 </a></td>
                                              
@@ -179,7 +179,7 @@
             </div>
             
             <script>
-                
+    /*            
     function procesoEnviaForm(classFrm,url,btn){
              
         initLoad();
@@ -233,7 +233,8 @@
         
     }
     
-    function abrePopupPrograma(docPHP, titulo, cod)
+    
+    function abrePopupCenter(docPHP, titulo, cod)
 {
     $("#ML_divPopup").html('');
     $("#ML_tituloForm").html(titulo);
@@ -246,6 +247,7 @@
         $("#ML_divPopup").html(data);
     });
 }
+*/
 
     </script>
             
