--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -59,6 +59,7 @@ function initialize(lat, lon, nombre, id) {
                 
                 $tempCodHTL = '';
                 $contPest=0;
+                $contPestDet=0;
                 $catEstrellas = ''; 
                 $detalleHoteles='';
                 $html='';
@@ -144,16 +145,22 @@ function initialize(lat, lon, nombre, id) {
                         
                         
                         foreach($this->objGetHoteles as $objTipoH){
-                            
+                            $contPestDet++;
                             if($objHoteles->getCodigoHtl() ==  $objTipoH->getCodigoHtl()){
                               $detalleHoteles.= '<tr class="colorText">'                              
-                                    . '<td style="padding: 2px; vertical-align: middle;">"'.$objTipoH->getTipoh().'"</td>'
-                                    . '<td style="padding: 2px; vertical-align: middle;">"'.$objTipoH->getPalimt().'"</td>'
-                                    . '<td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">"'.$objTipoH->getPrecioFinal().'"</td>'
+                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getTipoh().'</td>'
+                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getPalimt().'</td>'
+                                    . '<td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">'.$objTipoH->getPrecioFinal().'</td>'
                                     . '<td style="padding: 2px; vertical-align: middle;">'
-                                    . '<a href="#" class="btn btn-success btn-sm" style="width: 88px;">'.$objTipoH->getStatus().'</a>'
+                                    
+                                    . '<input type="hidden" name="BH_codHotel"'.$contPest.'" value="'.$objTipoH->getCodigoHtl().'"> '
+                                    . '<input type="hidden" name="BH_tipoh"'.$contPest.'" value="'.$objTipoH->getTipoh().'">'
+                                    . '<input type="hidden" name="BH_palimt"'.$contPest.'" value="'.$objTipoH->getPalimt().'">'
+                                    . '<input type="hidden" name="BH_precioFinal"'.$contPest.'" value="'.$objTipoH->getPrecioFinal().'">'  
+                                    . '<a href="#" id="btnCarroEnvio'.$contPestDet.'" onclick=procesoAddCarro(\'formSecHot'.$contPest.'\',\''.BASE_URL.'carro/insertOlVentas\',\'btnCarroEnvio'.$contPestDet.'\',\'\') class="btn btn-success btn-sm" style="width: 88px;">'.$objTipoH->getStatus().'</a>'
                                     . '</td>'
-                                    . '</tr>';  
+                                    . '</tr>';
+                                   
                             }
                             
                         }
@@ -231,7 +238,6 @@ function initialize(lat, lon, nombre, id) {
 </div>
 
 <script>
-
 
 </script>
 
