Se agrega un form para mandar un post al proceso de carro de compra.

--- a/views/hotel/buscarHoteles/seccionBHoteles.phtml
+++ b/views/hotel/buscarHoteles/seccionBHoteles.phtml
@@ -1,4 +1,5 @@
-  <div class="container">
+
+<div class="container">
             <div class="row">
                 
                            <div class="panel panel-primary">
@@ -47,7 +48,10 @@
                                                         <th role="columnheader" style="padding-left: 2px; width: 100px;">Status</th>
                                                     </tr>
                                                     </thead>
+                                                    <form class="formSecHot{pest}" action="#" method="post"> 
                                                     {DetalleHotel}
+                                                    </form>
+
                                                 </table>
                                             </td>
                                         </tr>
